// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerMenu matches the last snapshot 1`] = `
<View>
  <ImageBackground
    source={null}
  >
    <MockLinearGradient
      colors={
        Array [
          "rgba(0, 0, 0, 0)",
          "rgba(0, 0, 0, 0.1)",
          "rgba(0, 0, 0, 0.3)",
          "rgba(0, 0, 0, 0.6)",
        ]
      }
    />
    <View>
      <Image
        source={
          Object {
            "uri": "someurl",
          }
        }
      />
      <Text>
        foo
      </Text>
      <View>
        <Button
          iconName="Settings"
          onPress={[MockFunction]}
          text="Settings"
        />
        <Button
          iconName="Invite"
          text="Invite"
        />
      </View>
    </View>
  </ImageBackground>
  <SectionList
    SectionSeparatorComponent={[Function]}
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onEndReachedThreshold={2}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": undefined,
          "keyExtractor": [Function],
          "renderItem": [Function],
        },
        Object {
          "data": undefined,
          "keyExtractor": [Function],
          "renderItem": [Function],
        },
      ]
    }
    stickySectionHeadersEnabled={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <Button
    text="Start a Group"
  />
  <Memo(Connect(SocketListener)) />
</View>
`;

exports[`GroupRow hides badge when no newPostCount 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
  </ForwardRef>
</View>
`;

exports[`GroupRow highlights when matching currentGroupId 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
  </ForwardRef>
</View>
`;

exports[`GroupRow matches the last snapshot 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
    <View>
      <Text>
        7
      </Text>
    </View>
  </ForwardRef>
</View>
`;

exports[`SectionHeader matches the last snapshot 1`] = `
<View>
  <Text>
    NETWORKED GROUPS
  </Text>
</View>
`;

exports[`TextButton renders 1`] = `
<ForwardRef
  hitSlop={
    Object {
      "bottom": 10,
      "left": 10,
      "right": 15,
      "top": 20,
    }
  }
  onPress={[Function]}
>
  <Text>
    anything
  </Text>
</ForwardRef>
`;
